Corrected asteroid image extensions as they were not showing up

--- a/css/style.css
+++ b/css/style.css
@@ -290,7 +290,7 @@ transform: rotate(270deg);
 }
 
 #asteroids{
-	background: url(../resources/code/asteroids.PNG) no-repeat center center;
+	background: url(../resources/code/asteroids.png) no-repeat center center;
 	background-size: cover;
 }
 
